Added deployment link

--- a/assignments/week-2.html
+++ b/assignments/week-2.html
@@ -17,7 +17,7 @@
               <h6 class="card-title text-center"><a target="_blank" href="https://github.com/berkinalpp">@berkinalpp</a></h6>
               <br />
               <a target="_blank" href="https://github.com/berkinalpp/vanilla-js-projects/tree/master/js-color-flipper" class="btn btn-primary">Repository</a>
-              <a class="btn btn-secondary">Deployment</a>
+              <a target="_blank" href="https://brknalpcolorflipper.netlify.app/" class="btn btn-success">Deployment</a>
             </div>
           </div>
 
@@ -27,7 +27,7 @@
               <h6 class="card-title text-center"><a target="_blank" href="https://github.com/MehmetMaytahan">@MehmetMaytahan</a></h6>
               <br />
               <a target="_blank" href="https://github.com/MehmetMaytahan/color-flipper" class="btn btn-primary">Repository</a>
-              <a class="btn btn-secondary">Deployment</a>
+              <a class="btn btn-success">Deployment</a>
             </div>
           </div>
 
