--- a/assignments/week-3.html
+++ b/assignments/week-3.html
@@ -41,15 +41,15 @@
             </div>
           </div>
 
-          <!-- <div class="card h-100">
+           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title text-center">firstnameSurname</h5>
-              <h6 class="text-center"><a target="_blank" href="#">@</a></h6>
+              <h5 class="card-title text-center">Berkin Alp</h5>
+              <h6 class="text-center"><a target="_blank" href="#">@berkinalpp</a></h6>
               <br />
-              <a target="_blank" href="#" class="btn btn-primary">Repository</a>
-              <a target="_blank" href="#" class="btn btn-success">Deployment</a>
+              <a target="_blank" href="https://github.com/berkinalpp/kodluyoruz/tree/master/07-react-weather-app" class="btn btn-primary">Repository</a>
+              <a target="_blank" href="https://brknalpweatherapp.netlify.app" class="btn btn-success">Deployment</a>
             </div>
-          </div> -->
+          </div> 
        </div>   
     </div>
 
